Bug 98715 - Clicking on or moving ActionList: toolbar_filter_actions item makes SPAM filter icons disappear
Summary: Clicking on or moving ActionList: toolbar_filter_actions item makes SPAM filt...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.7.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 94181 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-02-06 19:45 UTC by Alan Mimms
Modified: 2007-09-14 12:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Mimms 2005-02-06 19:45:13 UTC
Version:           1.7.2 (using KDE KDE 3.3.2)
Installed from:    Gentoo Packages
Compiler:          gcc 3.3.5 Gentoo Linux 3.3.5-r1, ssp-3.3.2-3, pie-8.7.7.1
OS:                Linux

Use Anti-SPAM Wizard to create filter rules for spam.  Note that icons show up in tool bar to mark as Spam or as Ham.  I configured filters for bogofilter, spamassassin and also for gmx.  I have hand modified each filter to make the "move to folder" for each target a separate folder so I can tell how successful each of the spam filter applications is.

Open the Configure Toolbars dialog.  Without clicking on anything in the dialog, IMMEDIATELY the icons for "mark as SPAM" and "mark as HAM" disappear without even clicking Apply, etc.  This is strange (and probably a bug), but not the true issue here.

In the Configure Toolbars dialog, drag the "ActionList: toolbar_filter_actions" item anywhere in the toolbar list (i.e., move it up above the last item, etc.).  The item disappears (and we were previously warned that it can't be brought back) even though I didn't remove it, I simply dragged it to another point in the live toolbar list.

Also, just adding another item anywhere in the toolbar (e.g., to mark items as Important) and the SPAM/HAM toolbar buttons are now gone.

I can't tell if some setting specific to my kmail preferences is causing this or not.  I would be happy to supply additional information if this is useful.
Comment 1 Andreas Gungl 2005-02-12 20:59:58 UTC
Confirmed. I don't know exactly if this can be fixed in KDE 3.4 at all, the issue depends heavily on features in kdelibs. Let's see.
Comment 2 Andreas Gungl 2005-02-12 22:14:23 UTC
CVS commit by gungl: 

Avoid "conserve memory" when using dynamic actions.

BUGS: 98715


  M +1 -1      kmmainwin.cpp   1.604


--- kdepim/kmail/kmmainwin.cpp  #1.603:1.604
@@ -136,5 +136,5 @@ void KMMainWin::slotEditToolbars()
 void KMMainWin::slotUpdateToolbars()
 {
-  createGUI("kmmainwin.rc");
+  createGUI("kmmainwin.rc", false);
   applyMainWindowSettings(KMKernel::config(), "Main Window");
 }


Comment 3 Alan Mimms 2005-02-13 00:47:43 UTC
Danke Andreas.  That solves the problem of the item disappearing when you move it.  I can now move the icons for the SPAM/HAM buttons anywhere on the toolbar.

However, the icons disappear from the toolbar when the Configure Toolbars dialog is displayed (for example, by right clicking on the toolbar).  I can move the "ActionList: toolbar_filter_actions" item within the list and the icons reappear (in the proper new place) when I close the dialog.  People might be confused by the icons disappearing while the dialog is up.  Can this be fixed as well?  Should it be under a separate bug?
Comment 4 Andreas Gungl 2005-02-13 21:09:08 UTC
CVS commit by gungl: 

As requested for better usability. Limit the hiding of the dynamic
toolbar icons to a minimum.

BUG: 98715


  M +7 -5      kmmainwin.cpp   1.605


--- kdepim/kmail/kmmainwin.cpp  #1.604:1.605
@@ -120,7 +121,4 @@ void KMMainWin::displayStatusMsg(const Q
 void KMMainWin::slotEditToolbars()
 {
-  // remove dynamically created actions before editing
-  mKMMainWidget->clearFilterActions();
-
   saveMainWindowSettings(KMKernel::config(), "Main Window");
   KEditToolbar dlg(actionCollection(), "kmmainwin.rc");
@@ -130,12 +128,16 @@ void KMMainWin::slotEditToolbars()
 
   dlg.exec();
-  // plug dynamically created actions again
-  mKMMainWidget->initializeFilterActions();
 }
 
 void KMMainWin::slotUpdateToolbars()
 {
+  // remove dynamically created actions before editing
+  mKMMainWidget->clearFilterActions();
+
   createGUI("kmmainwin.rc", false);
   applyMainWindowSettings(KMKernel::config(), "Main Window");
+
+  // plug dynamically created actions again
+  mKMMainWidget->initializeFilterActions();
 }
 


Comment 5 Alan Mimms 2005-02-14 00:11:17 UTC
Excellent work.  This seems to solve all of my issues.  Thanks.
Comment 6 Andreas Gungl 2005-02-18 18:11:37 UTC
*** Bug 99709 has been marked as a duplicate of this bug. ***
Comment 7 Andreas Gungl 2005-02-18 18:11:46 UTC
*** Bug 94181 has been marked as a duplicate of this bug. ***
Comment 8 Derek Broughton 2005-02-18 19:06:36 UTC
Are you sure 99709 is a duplicate?  There is no obvious similarity - the buttons never disappear when the toolbar dialog is in use.  They just don't _reappear_ when Kontact is restarted.
Comment 9 Andreas Gungl 2005-02-18 22:08:05 UTC
I'm quite sure, as I have coded this functionality. ;)

The problem in KDE 3.3 was a general one. We had realized too late that the dynamic toolbar icon handling for the filters had created technical problems. Due to the freeze policy for KDE branches, I was not able to extend the GUI and underlaying functions in a way which had allowed to solve all those problems.
I could work around some things, but a general cleanup was possible only for KDE 3.4 which will be out soon.
I've marked the reports as duplicates because technically they rank all about the same problem, even if the visible symptoms have been different.

Anyway, enjoy KDE 3.4 and Kontact, and of course, feel free to reopen any report if you can reproduce it with the new version. We're programmers, not God, that's why we make errors sometimes. :)