As requested for better usability. Limit the hiding of the dynamic toolbar icons to a minimum.

BUG: 98715

svn path=/trunk/kdepim/; revision=389129